# bsdiff

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/test/jnihelloworld/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: old.apk  update.patch
app/src/main/cpp/bsdiff/: CMakeLists.txt  bsdiff.c  com_test_jnihelloworld_BsPatchUtils.c  com_test_jnihelloworld_BsPatchUtils.h
app/src/main/cpp/bsdiff/bzip2/: bzlib.h  bzlib_private.h
app/src/main/cpp/bspatch/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/cpp/compress/: CMakeLists.txt  com_test_jnihelloworld_CompressUtil.c  com_test_jnihelloworld_CompressUtil.h
app/src/main/cpp/libjpeg-turbo/: CMakeLists.txt  ChangeLog.md  cdjpeg.h  jconfig.txt  jerror.c
app/src/main/cpp/libjpeg-turbo/java/: TJBench.java  TJExample.java  TJUnitTest.java
app/src/main/cpp/libjpeg-turbo/java/org/libjpegturbo/turbojpeg/: TJ.java  TJCompressor.java  TJCustomFilter.java  TJDecompressor.java  TJException.java  TJScalingFactor.java  TJTransform.java  TJTransformer.java  YUVImage.java
app/src/main/cpp/videoc/: CMakeLists.txt  com_test_jnihelloworld_videoc_VideoUtil.c  com_test_jnihelloworld_videoc_VideoUtil.h  videoc.cpp
app/src/main/cpp/videoc/include/libavutil/: ffversion.h
app/src/main/java/: com_test_jnihelloworld_BsPatchUtils.h  com_test_jnihelloworld_CompressUtil.h  com_test_jnihelloworld_videoc_VideoUtil.h
app/src/main/java/com/test/jnihelloworld/: BsPatchUtils.java  CompressUtil.java  MainActivity.java  MutiUpload.java  MyGlRender.java  MyGlSurfaceView.java  OpenGLES20Activity.java  ShotterUtil.java  ToastHook.java  Triangle.java
app/src/main/java/com/test/jnihelloworld/bean/: TaskResult.java
app/src/main/java/com/test/jnihelloworld/videoc/: VideoUtil.java
app/src/main/res/layout/: activity_main.xml  activity_open.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/test/jnihelloworld/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
